Bug 6940 - new shadow changes make fbdev segfault
Summary: new shadow changes make fbdev segfault
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/fbdev (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2006-05-17 02:18 UTC by Kristian Høgsberg
Modified: 2006-05-18 14:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to fix shadowAdd crash (1.72 KB, patch)
2006-05-17 02:19 UTC, Kristian Høgsberg
no flags Details | Splinter Review

Description Kristian Høgsberg 2006-05-17 02:18:54 UTC
fbdev calls shadowAdd() with a NULL pixmap which breaks.  Attached patch fixes
the  crash but I still get

  FBIOBLACK: Invalid argument

from the fbdevhw module.
Comment 1 Kristian Høgsberg 2006-05-17 02:19:45 UTC
Created attachment 5643 [details] [review]
Patch to fix shadowAdd crash
Comment 2 Kevin E. Martin 2006-05-19 07:15:59 UTC
Changes checked in.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.