Fix ShadowFB support to work with recent miext/shadow changes from bug     #5460 (Kevin Martin), and apply fix for miext/shadow crasher     https://bugs.freedesktop.org/show_bug.cgi?id=6940 (Kristian Hoegsberg).